--- a/css/style.css
+++ b/css/style.css
@@ -18,12 +18,12 @@
  }
 
  .extra-div h2{
-    font-size: 0.9rem;
+    font-size: 1.5rem;
     margin: 20px 0 15px 0;
     font-weight: bold;
     line-height: 1.1;
     word-spacing: 4px;
-
+    color:#5ad2ed;
  }
 
 
